# tclap

./: .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  COPYING  CTestConfig.cmake  ChangeLog  INSTALL  Makefile.am  Makefile.in  NEWS  README  README.md  TODO.org  aclocal.m4  appveyor.yml  autotools.sh  azure-pipelines.yml  config.h.in  configure  configure.ac  configure.in  test_runner.py
config/: ac_cxx_have_sstream.m4  bb_enable_doxygen.m4  config.h.in
docs/: CMakeLists.txt  Doxyfile.in  Makefile.am  Makefile.in  build.html  index.html  manual.html  manual.xml  style.css  upload.sh
examples/: CMakeLists.txt  Makefile.am  Makefile.in  test1.cpp  test13.cpp  test14.cpp  test18.cpp  test2.cpp  test22.cpp  test24.cpp  test25.cpp  test28.cpp  test29.cpp  test3.cpp  test30.cpp  test31.cpp  test32.cpp  test33.cpp  test34.cpp  test35.cpp  test36.cpp  test37.cpp  test38.cpp  test39.cpp  test4.cpp  test40.cpp  test41.cpp  test42.cpp  test43.cpp  test47.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
include/: Makefile.in
include/tclap/: AliasArg.h  Arg.h  ArgContainer.h  ArgException.h  ArgGroup.h  ArgTraits.h  CMakeLists.txt  CmdLine.h  CmdLineInterface.h  CmdLineOutput.h  CommandLine.h  Constraint.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  Makefile.am  Makefile.in  MultiArg.h  MultiSwitchArg.h  OptionalUnlabeledTracker.h  PrintSensibly.h  StandardTraits.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  Visitor.h  XorHandler.h  ZshCompletionOutput.h  sstream.h
msc/: .gitignore  tclap-beta.sln
msc/examples/: test1.vcxproj  test1.vcxproj.filters  test2.vcxproj  test2.vcxproj.filters  test3.vcxproj  test3.vcxproj.filters  test4.vcxproj  test4.vcxproj.filters  test5.vcxproj  test5.vcxproj.filters  test6.vcxproj  test6.vcxproj.filters  test7.vcxproj  test7.vcxproj.filters  test8.vcxproj  test8.vcxproj.filters
msc/test/: ExamplesTest.cs  test.csproj
msc/test/Properties/: AssemblyInfo.cs
packaging/: pkgconfig.pc.in
scripts/: lint.py  release.sh
src/: Arg.cpp  CmdLine.cpp  Makefile.am  Makefile.in  PrintSensibly.cpp  SwitchArg.cpp  XorHandler.cpp
tests/: CMakeLists.txt  Makefile.am  Makefile.in  dotest.sh  expected-failures.txt  runtests.sh  simple-test.sh  simple_test.py  test.py  test1.py  test1.sh  test10.out  test10.py  test10.sh  test100.out  test100.sh  test101.out  test101.sh  test102.out  test102.sh  test103.out  test103.sh  test104.out  test104.sh  test105.out  test105.sh  test106.sh  test107.sh  test108.out  test108.sh  test109.out  test109.sh  test11.out  test11.py  test11.sh  test110.out  test110.sh  test111.sh  test112.sh  test113.out  (+200 more)
unittests/: CMakeLists.txt  CmdLineOutputTest.cpp  testing.h
