
noinst_PROGRAMS = test1 test2 test3 test4 test5 test6 test7

test1_SOURCES = test1.cpp
test2_SOURCES = test2.cpp
test3_SOURCES = test3.cpp
test4_SOURCES = test4.cpp
test5_SOURCES = test5.cpp
test6_SOURCES = test6.cpp
test7_SOURCES = test7.cpp

test1_LDADD = $(top_builddir)/src/libtclap.a
test2_LDADD = $(top_builddir)/src/libtclap.a
test3_LDADD = $(top_builddir)/src/libtclap.a
test4_LDADD = $(top_builddir)/src/libtclap.a
test5_LDADD = $(top_builddir)/src/libtclap.a
test6_LDADD = $(top_builddir)/src/libtclap.a
test7_LDADD = $(top_builddir)/src/libtclap.a

INCLUDES = -I$(top_builddir)/include

AM_CXXFLAGS = -Wall
