

TESTS = test1.sh \
		test2.sh \
		test3.sh \
		test4.sh \
		test5.sh \
		test6.sh \
		test7.sh \
		test8.sh \
		test9.sh \
		test10.sh \
		test11.sh \
		test12.sh \
		test13.sh \
		test14.sh \
		test15.sh \
		test16.sh \
		test17.sh \
		test18.sh \
		test19.sh \
		test20.sh \
		test21.sh \
		test22.sh \
		test23.sh \
		test24.sh \
		test25.sh

EXTRA_DIST = $(TESTS) \
			 test1.out \
			 test2.out \
			 test3.out \
			 test4.out \
			 test5.out \
			 test6.out \
			 test7.out \
			 test8.out \
			 test9.out \
			 test10.out \
			 test11.out \
			 test12.out \
			 test13.out \
			 test14.out \
			 test15.out \
			 test16.out \
			 test17.out \
			 test18.out \
			 test19.out \
			 test20.out \
			 test21.out \
			 test22.out \
			 test23.out \
			 test24.out \
			 test25.out 

