

TESTS = test1.py \
	test2.py \
	test3.py \
	test4.py \
	test5.py \
	test6.py \
	test7.py \
	test8.py \
	test9.py \
	test10.py \
	test11.py \
	test12.py \
	test13.py \
	test14.py \
	test15.py \
	test16.py \
	test17.py \
	test18.py \
	test19.py \
	test20.py \
	test21.py \
	test22.py \
	test23.py \
	test24.py \
	test25.py \
	test26.py \
	test27.py \
	test28.py \
	test29.py \
	test30.py \
	test31.py \
	test32.py \
	test33.py \
	test34.py \
	test35.py \
	test36.py \
	test37.py \
	test38.py \
	test39.py \
	test40.py \
	test41.py \
	test42.py \
	test43.py \
	test44.py \
	test45.py \
	test46.py \
	test47.py \
	test48.py \
	test49.py \
	test50.py \
	test51.py \
	test52.py \
	test53.py \
	test54.py \
	test55.py \
	test56.py \
	test57.py \
	test58.py \
	test59.py \
	test60.py \
	test61.py \
	test62.py \
	test63.py \
	test64.py \
	test65.py \
	test66.py \
	test67.py \
	test68.py \
	test69.py \
	test70.py \
	test71.py \
	test72.py \
	test73.py \
	test74.py \
	test75.py \
	test76.py \
	test77.py \
	test78.py \
	test79.py \
	test80.py \
	test81.py \
	test82.py \
	test83.py \
	test84.py \
	test86.py \
	test87.py \
	test88.py \
	test89.py \
	test90.py \
	test91.py \
	test92.py \
	test93.py \
	test94.py \
	test95.py \
	test96.py \
	test97.py \
	test98.py \
	test99.py \
	test100.py \
	test101.py \
	test102.py \
	test103.py \
	test106.py \
	test107.py \
	test108.py \
	test109.py \
	test110.py \
	test111.py \
	test112.py \
	test113.py

EXTRA_DIST = $(TESTS) \
	simple_test.py \
	test.py \
	expected-failures.txt \
	test1.out \
	test2.out \
	test3.out \
	test4.out \
	test5.out \
	test6.out \
	test7.out \
	test8.out \
	test9.out \
	test10.out \
	test11.out \
	test12.out \
	test13.out \
	test14.out \
	test15.out \
	test16.out \
	test17.out \
	test18.out \
	test19.out \
	test20.out \
	test21.out \
	test22.out \
	test23.out \
	test24.out \
	test25.out \
	test26.out \
	test27.out \
	test28.out \
	test29.out \
	test30.out \
	test31.out \
	test32.out \
	test33.out \
	test34.out \
	test35.out \
	test36.out \
	test37.out \
	test38.out \
	test39.out \
	test40.out \
	test41.out \
	test42.out \
	test43.out \
	test44.out \
	test45.out \
	test46.out \
	test47.out \
	test48.out \
	test49.out \
	test50.out \
	test51.out \
	test52.out \
	test53.out \
	test54.out \
	test55.out \
	test56.out \
	test57.out \
	test58.out \
	test59.out \
	test60.out \
	test61.out \
	test62.out \
	test63.out \
	test64.out \
	test65.out \
	test66.out \
	test67.out \
	test68.out \
	test69.out \
	test70.out \
	test71.out \
	test72.out \
	test73.out \
	test74.out \
	test75.out \
	test76.out \
	test77.out \
	test78.out \
	test79.out \
	test80.out \
	test81.out \
	test82.out \
	test83.out \
	test84.out \
	test86.out \
	test87.out \
	test88.out \
	test89.out \
	test90.out \
	test91.out \
	test92.out \
	test93.out \
	test94.out \
	test95.out \
	test96.out \
	test97.out \
	test98.out \
	test99.out \
	test100.out \
	test101.out \
	test102.out \
	test103.out \
	test106.out \
	test107.out \
	test108.out \
	test109.out \
	test110.out \
	test111.out \
	test112.out \
	test113.out
