
libtclapincludedir = $(includedir)/tclap

libtclapinclude_HEADERS = ArgException.h \
			 CmdLine.h \
			 CommandLine.h \
			 XorHandler.h \
			 MultiArg.h \
			 UnlabeledMultiArg.h \
			 ValueArg.h \
			 UnlabeledValueArg.h \
			 Visitor.h Arg.h \
			 HelpVisitor.h \
			 SwitchArg.h \
			 VersionVisitor.h \
			 IgnoreRestVisitor.h \
			 PrintSensibly.h

