
libtclapincludedir = $(includedir)/tclap

libtclapinclude_HEADERS = \
			 CmdLineInterface.h \
			 ArgException.h \
			 CmdLine.h \
			 XorHandler.h \
			 MultiArg.h \
			 UnlabeledMultiArg.h \
			 ValueArg.h \
			 UnlabeledValueArg.h \
			 Visitor.h Arg.h \
			 HelpVisitor.h \
			 SwitchArg.h \
			 VersionVisitor.h \
			 IgnoreRestVisitor.h \
			 CmdLineOutput.h \
			 StdOutput.h \
			 DocBookOutput.h

